--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,50 +1,67 @@
 .content{
 	background-color: #435158;
-	/*font-family: "Times New Roman", Georgia, Serif;*/
 }
 body{
 	/*background-image: url("../image/IMG_5004.JPG");*/
 	background-color:#303030;
-	font-family: "Times New Roman", Georgia, Serif;;
+	color: #FFFFFF;
 }
+
 a:link{
-	 color: #86EBE9;
+	 color: #FFFFFF;
 }
+
 a:visited {
-    color: #86EBE9;
+    color: #FFFFFF;
 }
+
 .Elink{
 	font-size: 15pt;
 }
+
 #textTitle{
 	font-size: 30pt;
 }
+
 #textDesc{
 	font-size: 15pt;
 }
+
 #textPrice{
 	font-size: 20pt;
 }
+
  #logo{
 	margin-left: 10%;
 }
+
 h1{
-	 color: #86EBE9;
+	color: #FFFFFF;
+	font-weight: 50;
+	font-size: 30pt;
 }
+
 p{
 	color:#DFFFFF;
 }
+
 h2{
 	color:#DFFFFF;
 }
-#section{
-	
+
+h3{
+	color: #86EBE9;
+	font-size: 20px;
+}
+
+#section{	
 	float:left;
     padding:15px;
 	line-height: 70%;
     color: #86EBE9;
     background-color:#303030; 
 }
+
 pre{
 	border:none;
 	background-color:#303030;
@@ -67,10 +84,10 @@ pre{
 }
 
 .homeWrapper{
-	height: 200px;
+	height: 500px;
 	width: 80%;
 	margin-left:10%;
-	background-image: url("../image/IMG_5004.JPG");
+	/*background-image: url("../image/IMG_5004.JPG");*/
 }
 
 #bottomNav{
@@ -83,3 +100,7 @@ pre{
 /*#homeImage{
 	background-image: url("../image/IMG_5004.JPG");
 }*/
+@font-face{
+	font-family: "M+1c";
+	scr: url(fontsquirrel.com/fonts/M-1c); 
+}
